# AssignMate

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose-local.yml  docker-compose.yml  exemple.env  local.Dockerfile  pyproject.toml  requirements.txt
AssignMate/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
AssignMate/AssignMate/: asgi.py  settings.py  urls.py  wsgi.py
AssignMate/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
AssignMate/assign/: admin.py  apps.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
AssignMate/assign/templatetags/: assign_tags.py
AssignMate/config/: settings.py
