[tool.poetry]
name = "assignmate"
version = "0.1.0"
description = "Django project for AssignMate"
authors = ["Roman Lodigin"]
readme = "README.md"
packages = [{include = "AssignMate"}]

[tool.poetry.dependencies]
python = "3.12.6"
Django = "5.2.7"
gunicorn = "23.0.0"
whitenoise = "6.6.0"
Pillow = "12.0.0"
python-decouple = "3.8"
django-crispy-forms = "2.0"
crispy-bootstrap5 = "0.7"
django-debug-toolbar = "6.1.0"
asgiref = "3.10.0"
django-taggit = "6.1.0"
markdown = "3.9"
python-dotenv = "1.2.1"
sqlparse = "0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-django = "4.5.2"
coverage = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "AssignMate.manage:main"
